<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/description"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/mDescriptionRecycler"
                    android:text="@string/default_text"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/class_assigned"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/mClassAssignedRecycler"
                    android:text="@string/default_text"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/assigned_date"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/mAssignedDateRecycler"
                    android:text="@string/default_text"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/due_date"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/mDueDateRecycler"
                    android:text="@string/default_text"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"/>
            </TableRow>
            <TableRow
                android:gravity="right">

               <CheckBox
                   android:id="@+id/mReminderRecycler"
                   android:text="@string/reminder"
                   android:textSize="20dp"
                   />
                <Button
                    android:gravity="center"
                    android:id="@+id/mDeleteRow"
                    android:text="@string/delete_row"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>


</LinearLayout>