<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.julia.homeworkcalendar.MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">
        <Button
            android:id="@+id/mSubmissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submissions_page"
            />
        <Button
            android:id="@+id/mViewHomeWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_homework"/>
        <Button
            android:id="@+id/mDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
